--- a/.gitignore
+++ b/.gitignore
@@ -60,9 +60,6 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
-docs/_build/
-
 # PyBuilder
 target/
 
@@ -87,3 +84,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Temp files
+*~
+.#*
+#*
